adapt all to jar file